# Fractal-finance

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md
src/: analyzer.rs  audit.rs  batch_testing.rs  block_size.rs  bootstrap.rs  bootstrap_config.rs  bootstrap_sampling.rs  collections.rs  computation_cache.rs  confidence_intervals.rs  config.rs  cross_validation.rs  decimal_finance.rs  deterministic_config.rs  diagnostics.rs  emission_models.rs  errors.rs  fft_ops.rs  generators.rs  hmm_core.rs  hurst_estimators.rs  lib.rs  linear_algebra.rs  math_utils.rs  memory_pool.rs  monte_carlo.rs  multifractal.rs  preprocessing.rs  regime_config.rs  regime_detection.rs  regime_results.rs  results.rs  secure_rng.rs  statistical_tests.rs  wavelet.rs
tests/: analyzer_edge_cases.rs  debug_variogram.rs  edge_case_stability.rs  end_to_end_comprehensive.rs  external_validation.rs  hurst_methods.rs  integration_error_handling.rs  integration_performance.rs  integration_workflow.rs  numerical_stability_detailed.rs  test_fbm_math.rs  test_fbm_scaling.rs  test_fixes.rs
